# steffahn.github.io

./: .gitignore  README.md  slick-template.cabal
app/: Main.hs
site/css/: style.css
site/posts/: 2023-01-01-01-10-sample-post.md  2023-01-02-02-52.md  2023-01-23-ThePhillipsCollection.md
site/templates/: atom.xml  header.html  post.html
